[gd_scene load_steps=3 format=3 uid="uid://bpod25e3l2box"]

[ext_resource type="Script" uid="uid://cj3cmq7qy3664" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://5jo2pduvpmmb" path="res://scenes/array_visualizer.tscn" id="1_o5qli"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0wfyh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0142752, 0.0142752, 0.0142752, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GenerateArray" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Generar"

[node name="SortOption" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "Bubblesort"
popup/item_0/id = 0
popup/item_1/text = "Insertsort"
popup/item_1/id = 1
popup/item_2/text = "Selectionsort"
popup/item_2/id = 2
popup/item_3/text = "Quicksort"
popup/item_3/id = 3

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = 0.05
max_value = 1.0
step = 0.05
value = 0.3

[node name="ArrayVisualizer" parent="." instance=ExtResource("1_o5qli")]

[connection signal="pressed" from="VBoxContainer/GenerateArray" to="." method="_on_generate_pressed"]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_sort_pressed"]
[connection signal="value_changed" from="VBoxContainer/HSlider" to="." method="_on_speed_slider_value_changed"]
